# LabWork-3.3

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  main.yml
Main/: CMakeLists.txt  main.cpp
Matrix/: CMakeLists.txt  TMultyStack.h  TQueue.h  TStack.h
TError/: CMakeLists.txt  TError.cpp  TError.h
TString/: TString.cpp
test/: CMakeLists.txt  test_Birch.cpp
